syntax = "proto3";

package getHouseInfo;

option go_package = "./proto;getHouseInfo";

service GetHouseInfo {
	rpc Call(CallRequest) returns (CallResponse) {}
	rpc GetHouseIndex(IndexRequest) returns (IndexResponse) {}
	rpc SearchHouse(SearchRequest)returns(SearchResponse){};
}

message CallRequest {
	int32 houseId = 1;
}

message CallResponse {
	string errno = 1;
	data data = 2;
}

message data{
	houseInfo house = 1;
	int32 user_id = 2;
}

message houseInfo {
	int32 acreage = 1;
	string address = 2;
	string beds = 3;
	int32 capacity = 4;
	repeated commentInfo comments = 5;
	int32 deposit = 6;
	repeated int32 facilities = 7;
	int32 hid = 8;
	repeated string img_urls = 9;
	int32 max_days = 10;
	int32 min_days = 11;
	int32 price = 12;
	int32 room_count = 13;
	string title = 14;
	string unit = 15;
	string user_avatar = 16;
	int32 user_id = 17;
	string user_name = 18;
}

message commentInfo{
	string comment = 1;
	string ctime = 2;
	string user_name = 3;
}

message IndexRequest{
}

message IndexResponse{
	string errno = 1;
	GetData data = 2;
}

message GetData{
	repeated Houses houses = 1;
}

message Houses {
	string address = 1;
	string area_name = 2;
	string ctime = 3;
	int32 house_id = 4;
	string img_url = 5;
	int32 order_count = 6;
	int32 price = 7;
	int32 room_count = 8;
	string title = 9;
	string user_avatar = 10;
}

message SearchRequest{
	string aid = 1;
	string sd = 2;
	string ed = 3;
	string sk = 4;
}

message SearchResponse{
	string errno = 1;
	GetData data = 2;
}

