syntax = "proto3";

package postHouses;

option go_package = "./proto;postHouses";

service PostHouses {
	rpc Call(CallRequest) returns (CallResponse) {}
}

message CallRequest {
	string acreage = 1;
	string address = 2;
	string area_id = 3;
	string beds = 4;
	string capacity = 5;
	string deposit = 6;
	repeated string facility = 7;
	string min_days = 8;
	string max_days = 9;
	string price = 10;
	string room_count = 11;
	string title = 12;
	string unit = 13;

	string name = 14;
}

message CallResponse {
	string errno = 1;
	string errmsg = 2;
	map<string,int32> data = 3;
}

